# LiVision

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  NOTICE  README.md  build.sh  compile-shaders-linux.sh  compile-shaders-macos.sh  compile-shaders.sh  compile_shaders.sh  install.sh  mkdocs.yml  uninstall.sh
.github/workflows/: build.yml  docs.yml
c++/: CMakeLists.txt  README.md  build.sh  compile-shaders-linux.sh  compile-shaders-macos.sh  configure-ninja.sh  main.cpp
c++/data/: box2.stl
c++/data/bunny/: README
c++/include/: SimScene.hpp  file_ops.hpp
c++/include/FastGL/: FastGL.hpp  RayCast.hpp  SceneBase.hpp
c++/include/FastGL/object/: Box.hpp  ObjectBase.hpp  Plane.hpp  PointCloud.hpp  Utils.hpp
c++/include/FastLS/: FastLS.hpp  PointCloud.hpp  STLParser.hpp  SceneBase.hpp  SimLidar.hpp  utils.hpp
c++/include/FastLS/object/: Box.hpp  Container.hpp  Cylinder.hpp  Lidar.hpp  Mesh.hpp  ObjectBase.hpp  Plane.hpp
c++/shader/: compute_ray_cast.sc  f_simple.sc  v_instancing.sc  varying.def.sc
c++/src/: FastGL.cpp  main.cpp
c++/src/FastLS/: FastLS.cpp  SimLidarBVH.cpp  utils.cpp
cmake/: livisionConfig.cmake.in  superbuild.cmake
data/: box.stl
debian/: .gitignore  changelog  control  copyright  liblivision-dev.install  liblivision1.install  not-installed  rules
debian/source/: options
docs/: basic_operations.md  camera.md  colors.md  container.md  index.md  objects.md  quick_start.md  requirements.txt  user_guide.md
docs/ja/: basic_operations.md  camera.md  colors.md  container.md  index.md  objects.md  quick_start.md  user_guide.md
example/: CMakeLists.txt  SimScene.hpp  main.cpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/objects/: CMakeLists.txt  main.cpp
examples/sdf/: CMakeLists.txt  ht01.sdf  main.cpp  world.sdf
examples/sdf/ht01/: ht01.sdf
examples/sonoma/: CMakeLists.txt  main.cpp
genesis/: drone.urdf  main.py
include/: SimScene.hpp
include/FastLS/: Container.hpp  FastLS.hpp  IMUObserver.hpp  LidarSim.hpp  MeshParser.hpp  ObjectBase.hpp  PointCloud.hpp  SceneBase.hpp  Settings.hpp  SimLidar.hpp  file_ops.hpp  utils.hpp
include/FastLS/marker/: Arrow.hpp  DegeneracyIndicator.hpp  Grid.hpp  Odometry.hpp  Path.hpp  PointCloud.hpp  PointNormalCloud.hpp
include/FastLS/object/: Arrow.hpp  Box.hpp  Container.hpp  Cylinder.hpp  DegeneracyIndicator.hpp  Drone.hpp  DroneBody.hpp  DroneLIdarUp.hpp  DroneLidarDown.hpp  DroneLidarUp.hpp  DroneNoLidar.hpp  Grid.hpp  Lidar.hpp  LidarSensor.hpp  Mesh.hpp  Mid360.hpp  ObjectBase.hpp  Odometry.hpp  Path.hpp  Plane.hpp  PointCloud.hpp  PointNormalCloud.hpp  Sphere.hpp
include/FastLS/object/marker/: Arrow.hpp  DegeneracyIndicator.hpp  Grid.hpp  Odometry.hpp  Path.hpp  PointCloud.hpp  PointNormalCloud.hpp
include/FastLS/object/obstacle/: Cone.hpp  Cylinder.hpp  DroneBody.hpp  DroneLidarDown.hpp  DroneLidarUp.hpp  Plane.hpp
include/FastLS/object/sensor/: Mid360.hpp
include/FastLS/obstacle/: Box.hpp  Cone.hpp  Cylinder.hpp  DroneBody.hpp  DroneLidarDown.hpp  DroneLidarUp.hpp  Mesh.hpp  Plane.hpp  Sphere.hpp  WireFrame.hpp
include/FastLS/sensor/: LidarSensor.hpp  Mid360.hpp
include/FastLS/sim/: DroneDynamics.hpp  DroneDynamics.hpp.old  IMUObserver.hpp  IMUObserver.hpp.old  LidarSim.hpp  PIDController.hpp
include/livision/: Camera.hpp  Camera.hpp.old  Color.hpp  ColorSpec.hpp  Container.hpp  LiVision.hpp  Log.hpp  MeshBuffer.hpp  MeshData.hpp  MeshParser.hpp  ObjectBase.hpp  Renderer.hpp  Vertex.hpp  Viewer.hpp
include/livision/imgui/: imgui.h  imgui_impl_sdl2.h
include/livision/implot/: implot.h
include/livision/marker/: Arrow.hpp  DegeneracyIndicator.hpp  Grid.hpp  Odometry.hpp  Path.hpp  PointCloud.hpp  PointNormalCloud.hpp
include/livision/object/: Drone.hpp  DroneBody.hpp  Mesh.hpp  Model.hpp  Text.hpp  primitives.hpp
include/livision/obstacle/: Box.hpp  Cone.hpp  Cylinder.hpp  DroneBody.hpp  DroneLidarDown.hpp  DroneLidarUp.hpp  Mesh.hpp  Plane.hpp  Sphere.hpp  WireFrame.hpp
include/livision/sensor/: LidarSensor.hpp  Mid360.hpp
include/livision/sim/: IMUObserver.hpp  LidarSim.hpp  PIDController.hpp
include_internal/livision/internal/: file_ops.hpp  mesh_buffer_access.hpp  mesh_data_access.hpp  stl_parser.hpp  utils.hpp
internal/livision/internal/: mesh_buffer_access.hpp  mesh_buffer_manager.hpp  sdf_loader.hpp  stl_parser.hpp
scripts/: README.md  build.sh  compile_shaders.sh  make-dist.sh  setup.sh
shader/: compute_ray_cast.sc  f_points.sc  f_simple.sc  f_textured.sc  v_points.sc  v_simple.sc  v_textured.sc  varying.def.sc
src/: Camera.cpp  Container.cpp  FastLS.cpp  Livision.cpp  Log.cpp  MeshBuffer.cpp  MeshData.cpp  ObjectBase.cpp  Renderer.cpp  Viewer.cpp  mesh_buffer_manager.cpp  sdf_loader.cpp  stb_truetype.cpp  utils.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/implot/: implot.cpp  implot_items.cpp
src/marker/: Arrow.cpp  DegeneracyIndicator.cpp  Grid.cpp  Odometry.cpp  Path.cpp
src/object/: Mesh.cpp  Model.cpp  Text.cpp  primitives.cpp
src/sim/: LidarSim.cpp
